@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-02-10] raised the requirement of libgcrypt version to >= 1.7.0
 * [2018-02-09] mpz_shash: bugfix changes the output of hash function g()
 * [2018-02-08] release 1.3.11 of LibTMCG
 * [2018-01-26] init_libTMCG(): added libgcrypt self-test
